--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=c3d10eb1f73c6251fbdfe43e089b84f8
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://d8cc506cf67f5f:41eed57b019f67@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,5 +28,12 @@ APP_SECRET=c3d10eb1f73c6251fbdfe43e089b84f8
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/p06"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
